# scramble_analysis

./: .gitignore  CMakeLists.txt  README.md
data/: README.md  generate.sh  rm_trailing.sh  scramble
include/: analysis.h  cube.h  tracing.h  turns.h
src/: analysis.cc  cube.cc  main.cc  tracing.cc  turns.cc
